--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ nbproject
 *.sublime-workspace
 .idea
 
+# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
+.rvmrc
+
+/node_modules
