--- a/package.json
+++ b/package.json
@@ -25,13 +25,21 @@
     "babel-preset-stage-2": "^6.1.2",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
-    "browserify-incremental": "^3.0.1"
+    "browserify-incremental": "^3.0.1",
+    "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11"
   },
   "dependencies": {
+    "cuid": "^1.3.8",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
+    "react-router": "^2.6.1",
     "redux": "^3.0.4",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "sanitize-html": "^1.13.0"
   }
 }
